--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 langauge: python
 python:
 - "3.6"
-install: "pip install requirements.txt"
+install: "pip install -r requirements.txt"
 script:
 - SECRET_KEY="whatever" manage.py test
