--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
 Django==1.11.17
 Pillow==4.3.0
-chardet==2.2.1
-colorama==0.2.5
 django-forms-bootstrap==3.1.0
+django-storages==1.9.1
 dj-database-url==0.5.0
 docutils==0.14
+gunicorn==20.0.4
+Jinja2==2.10
 gunicorn==19.7.1
-html5lib==0.999
-jmespath==0.9.3
-olefile==0.44
+Pillow==4.3.2
 psycopg2==2.7.3.1
 python-dateutil==2.6.1
 pytz==2017.2
-requests==2.20
-six==1.5.2
-stripe==1.70.0
+requests==2.20.0
+s3transfer==0.3.3
+stripe==2.41.0
 urllib3==1.23
 wheel==0.24.0
